--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,14 @@
 }
 
 .App__command-palette {
+    background-color: #F1F1F1;
+    max-width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     margin-bottom: 1.5rem;
+    font-weight:bold;
 }
 
 .App__interpreter-controls {
