C2LC-36: Add button class for the button style

--- a/src/CommandPaletteCommand.css
+++ b/src/CommandPaletteCommand.css
@@ -1,3 +1,6 @@
 .CommandPaletteCommand__command-button {
+    border-radius: 10px;
+    min-width: 110px;
+    min-height: 70px;
     margin-right: 1rem;
 }
