C2LC-90: Add styling for the warning icon

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,9 @@
     background-color: #E7DB6E;
     border: 1px solid #F1F1F1;
 }
+
+.App__warning-svg {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 0.5rem;
+}
