--- a/src/DeviceConnectControl.css
+++ b/src/DeviceConnectControl.css
@@ -1,13 +1,5 @@
-.DeviceConnectControl__connect-button {
-    width: 180px;
-    height: 70px;
-    background: #FFFFFF;
-    border: 2px solid #000000;
-    border-radius: 10px;
-}
-
-.DeviceConnectControl__dash-status-svg {
+.DeviceConnectControl__status-icon {
     margin-left: 0.5rem;
-    width: 12px;
-    height: 12px;
+    width: 0.9rem;
+    height: 0.9rem;
 }
