--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ button.btn {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+button.btn:focus {
+    box-shadow: 0 0 0 0.2rem #000;
+}
+
 button.command-block {
     width: 7rem;
     height: 4.5rem;
