--- a/src/ProgramBlockEditor.css
+++ b/src/ProgramBlockEditor.css
@@ -1,6 +1,7 @@
 .ProgramBlockEditor__container {
-    border: 0.1rem solid #555;
-    border-radius: 4%;
+    width: 60%;
+    height: 100rem;
+    border: 0.1rem solid #8F8F8F;
     padding: 1rem;
 }
 
@@ -15,4 +16,11 @@
 button.ProgramBlockEditor__program-block {
     display: block;
     margin-bottom: 0.5rem;
+}
+
+.ProgramBlockEditor__program-sequence {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    overflow: scroll;
 }
