C2LC-93: Add z-indexes for DeviceConnectControl

--- a/src/DeviceConnectControl.css
+++ b/src/DeviceConnectControl.css
@@ -1,4 +1,16 @@
+.DeviceConnectControl {
+    position: relative;
+    z-index: inherit;
+}
+
+.DeviceConnectControl__button {
+    position: relative;
+    z-index: 1;
+}
+
 .DeviceConnectControl__status-icon-container {
+    position: relative;
+    z-index: 0;
     background-color: #F1F1F1;
     padding: 1rem 0.5rem;
 }
