--- a/src/ProgramBlockEditor.css
+++ b/src/ProgramBlockEditor.css
@@ -1,26 +1,60 @@
 .ProgramBlockEditor__container {
-    width: 60%;
-    height: 100rem;
-    border: 0.1rem solid #8F8F8F;
-    padding: 1rem;
+    width: 44rem;
 }
 
 .ProgramBlockEditor__editor-actions {
     text-align: right;
 }
 
-.ProgramBlockEditor__editor-action-button {
+button.btn.ProgramBlockEditor__editor-action-button {
     margin-left: 1rem;
+    height: 2.8rem;
+    width: 2.8rem;
+    border-radius: 50%;
 }
 
-button.ProgramBlockEditor__program-block {
-    display: block;
-    margin-bottom: 0.5rem;
+.ProgramBlockEditor__footer {
+    min-height: 3.8rem;
+    background: #F1F1F1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.ProgramBlockEditor__header {
+    min-height: 3.8rem;
+    padding-top: 0.5rem;
+    background: #F1F1F1;
 }
 
 .ProgramBlockEditor__program-sequence {
+    min-height: 15.3rem;
+    border: 0.1rem solid #8F8F8F;
+    padding: 1rem;
     display: flex;
     align-items: center;
     flex-direction: row;
     overflow: scroll;
 }
+
+.ProgramBlockEditor__title {
+    font-weight:bold;
+    left: 50%;
+    margin-left: -2.8rem;
+    margin-top: 0.5rem;
+}
+
+button.ProgramBlockEditor__program-block {
+    display: block;
+    margin-bottom: 0.5rem;
+    margin-right: 1rem;
+}
+
+button.btn.ProgramBlockEditor__run-block {
+    margin-top: 0.5rem;
+    height: 2.8rem;
+    width: 2.8rem;
+    border-radius: 50%;
+}
+
+
