C2LC-87: Change minimum width and height of command-block

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ button.btn-primary:hover {
 }
 
 button.command-block {
-    width: 6.25rem;
-    height: 4rem;
+    min-width: 6.25rem;
+    min-height: 4rem;
 }
 
 button.command-block--pressed,
