C2LC-87: Update styling for the play button

--- a/src/ProgramBlockEditor.css
+++ b/src/ProgramBlockEditor.css
@@ -51,10 +51,17 @@ button.ProgramBlockEditor__program-block {
 }
 
 button.btn.ProgramBlockEditor__run-block {
+    padding: 0;
     margin-top: 0.5rem;
     height: 2.8rem;
     width: 2.8rem;
     border-radius: 50%;
 }
 
+
+.play-svg {
+    padding-left: 0.3rem;
+    width: 1.5rem;
+    height: 1.5rem;
+}
 
