C2LC-85: Make the modal to be centered without using 'centered' prop

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,13 @@ button.btn-command-block--none {
     width: 2.75rem;
     height: 2.75rem;
 }
+
+.modal {
+    height: 50%;
+    margin-top: 13rem;
+}
+
+.modal-content {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
