C2LC-79: Change width and height of the start indicator to use rem

--- a/src/ProgramBlockEditor.css
+++ b/src/ProgramBlockEditor.css
@@ -33,8 +33,8 @@ button.ProgramBlockEditor__program-block {
     text-align: center;
     background-color: #000;
     color: #fff;
-    width: 62px;
-    height: 62px;
+    width: 3.5rem;
+    height: 3.5rem;
     border-radius: 50%;
     margin-bottom: 0.5rem;
 }
