C2LC-87: Update Program Editor styling
- Use Bootstrap responsive grid for layout
- Rename the class used to indicate the selected editor command to
  ProgramBlockEditor__editor-action-button--pressed
- Update ProgramBlockEditor.test.js to check for this pressed class
  rather than the Bootstrap variant
- Remove the stroke styling from Add.svg and Delete.svg so that we
  can style conveniently from CSS

--- a/src/ProgramBlockEditor.css
+++ b/src/ProgramBlockEditor.css
@@ -1,79 +1,83 @@
 .ProgramBlockEditor__container {
-    width: 44rem;
-}
-
-.ProgramBlockEditor__editor-actions {
-    text-align: right;
-}
-
-button.btn.ProgramBlockEditor__editor-action-button {
-    margin-left: 1rem;
-    height: 2.8rem;
-    width: 2.8rem;
-    border-radius: 50%;
-    background-color: #FFF;
-}
-
-button.btn.editor-action-button--active {
-    background-color: #000;
-}
-
-.ProgramBlockEditor__editor-action-button-svg > line {
-    stroke: #000 !important;
-}
-
-.ProgramBlockEditor__editor-action-button-svg--active > line {
-    stroke: #FFF !important;
-}
-
-.ProgramBlockEditor__footer {
-    min-height: 3.8rem;
+    padding-top: 1rem;
     background: #F1F1F1;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
 }
 
 .ProgramBlockEditor__header {
-    min-height: 3.8rem;
-    padding-top: 0.5rem;
-    background: #F1F1F1;
-}
-
-.ProgramBlockEditor__program-sequence {
-    min-height: 15.3rem;
-    border: 0.1rem solid #8F8F8F;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    overflow: scroll;
+    min-height: 3.5rem;
 }
 
 .ProgramBlockEditor__title {
-    font-weight:bold;
-    left: 50%;
-    margin-left: -2.8rem;
-    margin-top: 0.5rem;
+    text-align: center;
+    font-weight: bold;
 }
 
-button.ProgramBlockEditor__program-block {
-    display: block;
-    margin-bottom: 0.5rem;
-    margin-right: 1rem;
+.ProgramBlockEditor__editor-actions {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-right: 15px;
 }
 
-button.btn.ProgramBlockEditor__run-block {
-    padding: 0;
+button.btn.ProgramBlockEditor__editor-action-button {
     margin-top: 0.5rem;
-    height: 2.8rem;
-    width: 2.8rem;
+    margin-right: 1.15rem;
+    border: 1px solid #FFF;
     border-radius: 50%;
+    background-color: #FFF;
+    padding: 0.5rem;
 }
 
-.play-svg {
-    padding-left: 0.3rem;
+button.btn.ProgramBlockEditor__editor-action-button:not(:focus) {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+}
+
+button.btn.ProgramBlockEditor__editor-action-button--pressed {
+    background-color: #000;
+}
+
+.ProgramBlockEditor__editor-action-button-svg {
     width: 1.5rem;
     height: 1.5rem;
 }
 
+.ProgramBlockEditor__editor-action-button svg {
+    stroke: #000;
+}
+
+button.ProgramBlockEditor__editor-action-button--pressed svg {
+    stroke: #FFF;
+}
+
+.ProgramBlockEditor__program-sequence {
+    border: 0.1rem solid #8F8F8F;
+    background: #FFF;
+    padding: 5rem 1rem;
+    white-space: nowrap;
+    overflow: scroll;
+}
+
+button.ProgramBlockEditor__program-block {
+    margin-right: 1.4rem;
+}
+
+.ProgramBlockEditor__footer {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+
+button.btn.ProgramBlockEditor__run-button {
+    padding: 0.6rem 0.45rem 0.6rem 0.75rem;
+    border: 1px solid #FFF;
+    border-radius: 50%;
+}
+
+button.btn.ProgramBlockEditor__run-button:not(:focus) {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+}
+
+.ProgramBlockEditor__play-svg {
+    width: 1.6rem;
+    height: 1.6rem;
+}
