--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,24 @@
-.App__mode-and-robots-section {
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
-    margin-right: 3.3rem;
-    display: flex;
-    flex-direction: row-reverse;
+.App__robot-connection-section {
+    margin-top: 1.5rem;
+    text-align: right;
 }
 
-.App__editor-and-graphics-section {
-    margin-bottom: 1.5rem;
+.App__program-section {
+    margin-top: 1.5rem;
 }
 
 .App__command-palette {
-    height: 22.9rem;
+    height: 100%;
+    padding: 1rem 0;
     background-color: #F1F1F1;
-    max-width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    margin-bottom: 1.5rem;
-    font-weight: bold;
-    margin-right: 1rem;
+    text-align: center;
 }
 
-.App__interpreter-controls {
+.App__command-palette-heading {
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.App__command-palette-command {
     margin-top: 1rem;
 }
