--- a/src/DashConnectionErrorModal.css
+++ b/src/DashConnectionErrorModal.css
@@ -1,23 +1,31 @@
-.DashConnectionErrorModal-container {
-    height: 0;
-    width: 650px;
-    background-color: #FFFFFF;
-    border-radius: 0.75rem;
+.DashConnectionErrorModal {
+    width: 35rem;
 }
 
-.DashConnectionErrorModal-error-svg {
-    width: 1.5rem;
-    height: 1.5rem;
+.DashConnectionErrorModal__content {
+    padding: 3rem 4rem;
+}
+
+.DashConnectionErrorModal__header {
+    font-weight: bold;
+}
+
+.DashConnectionErrorModal__error-svg {
+    width: 2rem;
+    height: 2rem;
     margin-right: 0.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.DashConnectionErrorModal__body {
+    margin-top: 1rem;
+}
+
+.DashConnectionErrorModal__footer {
+    margin-top: 3rem;
+    text-align: center;
 }
 
 .DashConnectionErrorModal__option-button {
-    margin: auto;
-    width: 7rem;;
-    height: 4.5rem;
-    border-radius: 0.75rem;
-    background-color: #FFFFFF;
-    border: 2px solid #000000;
-    box-sizing: border-box;
+    min-width: 11rem;
 }
