--- a/src/c2lc-bootstrap.scss
+++ b/src/c2lc-bootstrap.scss
@@ -1,6 +1,6 @@
 $theme-colors: (
     "primary": #FFFFFF,
-    "command-block--forward": #54BCE7,
+    "command-block--forward": #91BD58,
     "command-block--left": #E1604B,
     "command-block--right": #E7DB6E,
     "command-block--none": #F8F8F8
