--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .ProgramBlockEditor__container {
     padding-top: 1rem;
     background: #F1F1F1;
@@ -102,7 +104,7 @@ button.btn.ProgramBlockEditor__run-button {
 }
 
 button.btn.ProgramBlockEditor__run-button:disabled svg {
-    fill: #777;
+    fill: $c2lc-disabled-fg-color;
 }
 
 button.btn.ProgramBlockEditor__run-button:not(:focus) {
