--- a/src/ProgramBlockEditor.css
+++ b/src/ProgramBlockEditor.css
@@ -58,12 +58,27 @@ button.ProgramBlockEditor__editor-action-button--pressed svg {
     overflow-x: scroll;
 }
 
+.ProgramBlockEditor__program-sequence-scroll-container::-webkit-scrollbar {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.ProgramBlockEditor__program-sequence-scroll-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1.5rem #DBDBDB;
+}
+
+.ProgramBlockEditor__program-sequence-scroll-container::-webkit-scrollbar-thumb {
+    background-color: #F8F8F8;
+    outline: 1px solid #CCCCCC;
+}
+
 .ProgramBlockEditor__program-sequence {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    height: 14rem;
+    height: 12.5rem;
+    padding-top: 0.5rem;
     padding-left: 1.4rem;
     float: left;
 }
