--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,13 @@
 /* Colors */
 
+$c2lc-primary-button-color: #FFFFFF;
 $c2lc-forward-command-color: #54BCE7;
 $c2lc-left-command-color: #E1604B;
 $c2lc-right-command-color: #E7DB6E;
 
-$c2lc-disabled-fg-color: #777;
+$c2lc-focus-indicator-color: #000000;
+
+$c2lc-disabled-fg-color: #777777;
 
 /* Borders */
 
