C2LC-116: Rename disabled color SCSS variable

--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -27,5 +27,5 @@
 }
 
 .DeviceConnectControl.DeviceConnectControl--disabled svg {
-    stroke: $c2lc-disabled-fg-color;
+    stroke: $c2lc-disabled-color;
 }
