--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 /* Bootstrap */
 
 $theme-colors: (
-    'primary': #FFFFFF,
+    'primary': $c2lc-primary-button-color,
     'command-block--forward': $c2lc-forward-command-color,
     'command-block--left': $c2lc-left-command-color,
     'command-block--right': $c2lc-right-command-color,
