--- a/src/App.scss
+++ b/src/App.scss
@@ -35,3 +35,19 @@
 .App__command-palette-command {
     margin-top: 1rem;
 }
+
+.App__instructions-heading {
+    font-size: 1.5rem;
+    font-weight: normal;
+    margin: 2rem 0 1rem 0;
+}
+
+.App__instructions-section-heading {
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 1rem 0 0.5rem 0;
+}
+
+.App__instructions-text {
+    max-width: 40em;
+}
