C2LC-118: Set max-width on the Delete All button

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -83,6 +83,7 @@ button.ProgramBlockEditor__delete-all-button {
     background-color: #E2452B;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    max-width: 5em;
     margin-right: 0.5rem;
     padding: 0 0.5rem;
     position: absolute;
