--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,7 +2,7 @@
 
 $c2lc-primary-button-color: #FFFFFF;
 
-$c2lc-forward-command-color: #54BCE7;
+$c2lc-forward-command-color: #91BD58;
 $c2lc-left-command-color: #E1604B;
 $c2lc-right-command-color: #E7DB6E;
 
