--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@ button.btn {
 
 button.btn:focus {
     box-shadow: 0 0 0 $c2lc-focus-indicator-width #000;
+    z-index: 1;
 }
 
 button.btn-primary,
