--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -90,6 +90,10 @@ button.ProgramBlockEditor__delete-all-button {
     right: 0;
 }
 
+button.btn.ProgramBlockEditor__delete-all-button--disabled {
+    background-color: $c2lc-disabled-color;
+}
+
 button.ProgramBlockEditor__delete-all-button:hover {
     color: #FFF;
     background-color: #000;
