C2LC-173: Add a class for ActionPanel hidden visibility

--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -11,6 +11,10 @@
     align-items: center;
 }
 
+.ActionPanel__panel--hidden {
+    display: none;
+}
+
 button.btn.ActionPanel__action-buttons {
     width: 1.84rem;
     height: 1.84rem;
