--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -12,6 +12,15 @@
     align-items: center;
 }
 
+.ActionPanel__panel::before {
+    content: '';
+    position: absolute;
+    right: 100%;
+    border-top: 0.7rem solid transparent;
+    border-right: 1rem solid #F1F1F1;
+    border-bottom: 0.7rem solid transparent;
+}
+
 .ActionPanel__panel--hidden {
     display: none;
 }
