--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -19,6 +19,16 @@
     border-top: 0.7rem solid transparent;
     border-right: 1rem solid #F1F1F1;
     border-bottom: 0.7rem solid transparent;
+    z-index: 1;
+}
+
+.ActionPanel__panel::after {
+    content: '';
+    position: absolute;
+    right: 100%;
+    border-top: 0.9rem solid transparent;
+    border-right: 1.2rem solid #939595;
+    border-bottom: 0.9rem solid transparent;
 }
 
 .ActionPanel__panel--hidden {
