--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -19,7 +19,7 @@
 .ProgramBlockEditor__editor-actions {
     position: absolute;
     right: 0;
-    top: 0;
+    bottom: 0.09rem;
 }
 
 button.btn.ProgramBlockEditor__editor-action-button {
