--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -10,6 +10,10 @@
     z-index: 1;
 }
 
+.DeviceConnectControl__button:hover {
+    background-color: $c2lc-focus-indicator-color;
+}
+
 .DeviceConnectControl__status-icon-container {
     position: relative;
     z-index: 0;
