--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -31,6 +31,10 @@ button.btn.ProgramBlockEditor__editor-action-button {
     padding: 0.5rem;
 }
 
+button.btn.ProgramBlockEditor__editor-action-button:hover {
+    background-color: $c2lc-focus-indicator-color;
+}
+
 button.btn.ProgramBlockEditor__editor-action-button:not(:focus) {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
