--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,7 +6,7 @@ $c2lc-forward-command-color: #91BD58;
 $c2lc-left-command-color: #E1604B;
 $c2lc-right-command-color: #E7DB6E;
 
-$c2lc-focus-indicator-color: #000000;
+$c2lc-focus-indicator-color: #299DCE;
 
 $c2lc-disabled-color: #777777;
 
