--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,11 @@ button.btn {
 }
 
 button.btn:focus {
-    box-shadow: 0 0 0 $c2lc-focus-indicator-width #000;
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
+}
+
+button.btn:hover {
+    background-color: $c2lc-focus-indicator-color;
 }
 
 button.btn-primary,
