--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,17 @@
 @import 'variables';
 
 .App__heading-section {
+    display: flex;
     background: #000;
     color: #FFF;
+    padding: 0.5rem 3rem;
 }
 
 .App__app-heading {
+    justify-content: space-between;
+}
+
+.App__app-heading-text {
     font-weight: normal;
     font-size: 1.3rem;
     margin: 1rem 0;
