--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -1,25 +1,27 @@
 @import 'variables';
 
 .DeviceConnectControl {
-    position: relative;
     z-index: inherit;
 }
 
-.DeviceConnectControl__button {
+button.btn-primary.DeviceConnectControl__button {
+    background-color: #FFF;
     position: relative;
     z-index: 1;
+    padding: 0.85rem 1.25rem;
 }
 
 .DeviceConnectControl__status-icon-container {
     position: relative;
-    z-index: 0;
-    background-color: #F1F1F1;
     padding: 1rem 0.5rem;
 }
 
 .DeviceConnectControl__status-icon {
-    width: 0.9rem;
-    height: 0.9rem;
+    position: absolute;
+    top: 0rem;
+    left: 0rem;
+    width: 3.5rem;
+    height: 3.5rem;
 }
 
 .DeviceConnectControl svg {
