C2LC-180: Apply the hover colour to the connect button seperately

--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -11,7 +11,7 @@
 }
 
 .DeviceConnectControl__button:hover {
-    background-color: $c2lc-focus-indicator-color;
+    background-color: #299DCE;
 }
 
 .DeviceConnectControl__status-icon-container {
