C2LC-180: Change hover colour of editor action buttons

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -32,7 +32,7 @@ button.btn.ProgramBlockEditor__editor-action-button {
 }
 
 button.btn.ProgramBlockEditor__editor-action-button:hover {
-    background-color: $c2lc-focus-indicator-color;
+    background-color: #e5e5e5;
 }
 
 button.btn.ProgramBlockEditor__editor-action-button:not(:focus) {
