--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -10,7 +10,12 @@
     z-index: 1;
 }
 
-.DeviceConnectControl__button:hover {
+button.btn.DeviceConnectControl__button:focus {
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+}
+
+button.btn.DeviceConnectControl__button:hover {
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
     background-color: #299DCE;
 }
 
