--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,8 +3,8 @@
 $c2lc-primary-button-color: #FFFFFF;
 
 $c2lc-forward-command-color: #91BD58;
-$c2lc-left-command-color: #E1604B;
-$c2lc-right-command-color: #E7DB6E;
+$c2lc-left-command-color: #E7DB6E;
+$c2lc-right-command-color: #E1604B;
 
 $c2lc-focus-indicator-color: #000000;
 
@@ -17,3 +17,7 @@ $c2lc-button-border-width: 2px;
 /* Focus Indicator */
 
 $c2lc-focus-indicator-width: 0.2rem;
+
+/* Hover Indicator */
+
+$c2lc-hover-indicator-width: 0.1rem;
