C2LC-179: Use BEM style for connected status

--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -32,7 +32,7 @@ button.btn-primary.DeviceConnectControl__button {
     top: 0.1rem;
 }
 
-.DeviceConnectControl__dash-icon.connected {
+.DeviceConnectControl__dash-icon--connected {
     opacity: 100%;
 }
 
