C2LC-171: Set selected command at start of drag
Also:

- Manage dynamic sizing of the drop area in AddNode
- Refactor AddNode with a fixed set of properties and render in JSX

--- a/src/index.scss
+++ b/src/index.scss
@@ -54,8 +54,9 @@ button.command-block {
     min-height: 4rem;
 }
 
-button.command-block--pressed,
-button.command-block--pressed:hover {
+button.btn.command-block.command-block--pressed,
+button.btn.command-block.command-block--pressed:hover,
+button.btn.command-block.command-block--pressed:active {
     border: $c2lc-button-border-width dashed #000000;
 }
 
