C2LC-173: Update overall layout to use grid system and change program sequence area back to horizontal layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+body {
+    overflow: hidden;
+}
+
 .App__header {
     display: flex;
     background: #000;
@@ -17,16 +21,35 @@
     margin: 1rem 0;
 }
 
+.App__main-container {
+    height: calc(100vh - 3rem - 6vh);
+    padding: 3vh 2vw;
+    display: grid;
+    grid-template-columns: 15rem auto;
+    grid-template-rows: 3rem auto;
+    column-gap: 2vw;
+    row-gap: 3vh;
+}
+
 .App__bluetooth-api-warning-section {
-    margin-top: 1.5rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 .App__program-section {
-    margin-top: 1.5rem;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 .App__command-palette {
-    height: 100%;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
     padding: 1rem 0;
     background-color: #F1F1F1;
     text-align: center;
