--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,25 +1,29 @@
 @import 'variables';
 
 .ProgramBlockEditor__container {
-    padding-top: 1rem;
     background: #F1F1F1;
+    display: grid;
+    height: 100%;
+    grid-template-rows: 4rem auto 4rem;
 }
 
 .ProgramBlockEditor__header {
-    min-height: 3rem;
+    display: flex;
+    justify-content: center;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 .ProgramBlockEditor__heading {
-    text-align: center;
+    margin-top: 1.5rem;
     font-weight: bold;
     font-size: inherit;
-    margin: 0;
 }
 
 .ProgramBlockEditor__editor-actions {
-    position: absolute;
-    right: 0;
-    bottom: 0.09rem;
+    grid-column-start: 4;
+    grid-column-end: 5;
+    margin-left: -2rem;
 }
 
 button.btn.ProgramBlockEditor__editor-action-button {
@@ -74,16 +78,19 @@ button.btn.ProgramBlockEditor__editor-action-button--pressed.ProgramBlockEditor_
 }
 
 .ProgramBlockEditor__program-sequence-scroll-container {
+    grid-row-start: 2;
+    grid-row-end: 3;
     border: 0.1rem solid #8F8F8F;
     background: #FFF;
-    padding: 0;
-    overflow-y: scroll;
-    height: 38rem;
+    overflow: scroll;
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .ProgramBlockEditor__program-sequence {
     display: flex;
-    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     padding-top: 2.5rem;
@@ -107,12 +114,21 @@ button.ProgramBlockEditor__program-block--active {
 }
 
 .ProgramBlockEditor__footer {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    text-align: center;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 1.6rem auto 1.6rem;
+}
+
+.ProgramBlockEditor__run {
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
 
 button.btn.ProgramBlockEditor__run-button {
+    margin-top: 0.5rem;
     padding: 0.6rem 0.45rem 0.6rem 0.75rem;
     border: 1px solid #FFF;
     border-radius: 50%;
@@ -161,13 +177,13 @@ button.btn.ProgramBlockEditor__run-button.ProgramBlockEditor__run-button--disabl
 }
 
 .ProgramBlockEditor__play-svg {
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 1.7rem;
+    height: 1.7rem;
     display: block;
 }
 
 .ProgramBlockEditor__program-block-connector {
     background-color: #939595;
-    width: 0.1rem;
-    min-height: 2rem;
+    min-width: 2rem;
+    height: 0.1rem;
 }
