--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -1,13 +1,12 @@
 @import 'variables';
 
 .ActionPanel__panel {
-    height: 16rem;
-    width: 5rem;
+    height: 5rem;
+    width: 16rem;
     background-color: #F1F1F1;
     border: 0.1rem solid #939595;
     border-radius: 3rem;
     display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -15,20 +14,22 @@
 .ActionPanel__panel::before {
     content: '';
     position: absolute;
-    right: 100%;
-    border-top: 0.7rem solid transparent;
-    border-right: 1rem solid #F1F1F1;
-    border-bottom: 0.7rem solid transparent;
+    left: 45%;
+    top: 100%;
+    border-left: 0.7rem solid transparent;
+    border-top: 1rem solid #F1F1F1;
+    border-right: 0.7rem solid transparent;
     z-index: 1;
 }
 
 .ActionPanel__panel::after {
     content: '';
     position: absolute;
-    right: 100%;
-    border-top: 0.9rem solid transparent;
-    border-right: 1.2rem solid #939595;
-    border-bottom: 0.9rem solid transparent;
+    left: 43.8%;
+    top: 100%;
+    border-left: 0.9rem solid transparent;
+    border-top: 1.2rem solid #939595;
+    border-right: 0.9rem solid transparent;
 }
 
 .ActionPanel__panel--hidden {
